--- a/R.3.html
+++ b/R.3.html
@@ -10,7 +10,8 @@
 <body>
     <div>
         <div class="cajon">
-          <video class="video" src="Lobo.mp4" ></video>
+          <video controls autoplay
+          class="video" src="Lobo.mp4" >></audio></video>
           <div class="modal">
           </div>
         </div > 
@@ -19,6 +20,5 @@
             <p>Los lobos han intrigado al ser humano desde la antigüedad, y muchas culturas eligieron identificarse con ellos, ya que se caracterizan por su ferocidad, su espíritu de manada y su tenaz supervivencia en ambientes hostiles.</p>       
         </div>
     </div>
-    <script src="R.3.js"></script>
 </body>
 </html>
